# viska

./: .gitignore  Cargo.toml  LICENSE  Readme.md  diesel.toml  notes.md  rustfmt.toml
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs
lib/helpers/: Cargo.toml
lib/helpers/src/: lib.rs
lib/models/: Cargo.toml
lib/models/src/: auth_request.rs  dialog.rs  error.rs  handlers.rs  lib.rs  not_found.rs  receivers.rs  registration.rs  request.rs  response.rs  result_ext.rs  sip_message.rs  sip_message_ext.rs  transaction.rs
lib/models/src/core/: mod.rs
lib/processor/: Cargo.toml
lib/processor/src/: error.rs  helpers.rs  lib.rs  presets.rs  request_handler.rs
lib/rsip/: Cargo.toml  LICENSE  license.md
lib/rsip/src/: error.rs  lib.rs
lib/rsip/src/common/: auth.rs  content_type.rs  ip_addr.rs  language.rs  method.rs  mod.rs  socket_addr.rs  status_code.rs  transport.rs  version.rs
lib/rsip/src/common/uri/: auth.rs  domain.rs  host_with_port.rs  mod.rs  param.rs  schema.rs
lib/rsip/src/headers/: mod.rs
lib/rsip/src/headers/header/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  event.rs  expires.rs  from.rs  in_reply_to.rs  max_forwards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  subscription_state.rs  supported.rs  (+8 more)
lib/rsip/src/headers/header/named/: contact_param.rs  mod.rs  named_header.rs  named_param.rs  named_params.rs
lib/rsip/src/message/: debug_ext.rs  expires_ext.rs  headers_ext.rs  macros.rs  mod.rs  request.rs  response.rs  sip_message.rs
lib/server/: Cargo.toml
lib/server/src/: error.rs  lib.rs  tcp.rs  udp.rs
lib/sip-helpers/: Cargo.toml
lib/sip-helpers/src/: error.rs  lib.rs
lib/sip_server/: Cargo.toml
lib/sip_server/src/: element_builder.rs  error.rs  helpers.rs  lib.rs  presets.rs  sip_manager.rs
lib/sip_server/src/core/: capabilities.rs  core.rs  mod.rs  processor.rs  registrar.rs
lib/sip_server/src/core/dialogs/: mod.rs
lib/sip_server/src/core/dialogs/uac/: mod.rs
lib/sip_server/src/core/dialogs/uac/states/: confirmed.rs  deleted.rs  early.rs  errored.rs  mod.rs  unconfirmed.rs
lib/sip_server/src/core/dialogs/uas/: mod.rs
lib/sip_server/src/core/impls/: mod.rs
lib/sip_server/src/core/impls/proxy/: mod.rs  processor.rs
lib/sip_server/src/core/impls/req_processor/: capabilities.rs  mod.rs  registrar.rs
lib/sip_server/src/core/impls/ua/: mod.rs  processor.rs
lib/sip_server/src/core/impls/uac/: mod.rs  processor.rs  register.rs
lib/sip_server/src/core/impls/uas/: mod.rs  processor.rs
lib/sip_server/src/transaction/: mod.rs
lib/sip_server/src/transaction/sm/: mod.rs
lib/sip_server/src/transaction/sm/uac/: mod.rs
lib/sip_server/src/transaction/sm/uac/states/: calling.rs  completed.rs  mod.rs  proceeding.rs  terminated.rs  trying.rs
lib/sip_server/src/transaction/sm/uac_invite/: mod.rs
lib/sip_server/src/transaction/sm/uac_invite/states/: accepted.rs  completed.rs  mod.rs  proceeding.rs  terminated.rs
lib/sip_server/src/transaction/sm/uas/: mod.rs
lib/sip_server/src/transaction/sm/uas/states/: confirmed.rs  proceeding.rs
lib/sip_server/src/transaction/sm/uas_invite/: mod.rs
lib/sip_server/src/transaction/sm/uas_invite/states/: mod.rs  terminated.rs
lib/sip_server/src/transaction/uac/: mod.rs
lib/sip_server/src/transaction/uac/states/: accepted.rs  calling.rs  completed.rs  errored.rs  proceeding.rs  terminated.rs
lib/sip_server/src/transaction/uas/: mod.rs
lib/sip_server/src/transaction/uas/states/: accepted.rs  completed.rs  confirmed.rs  errored.rs  mod.rs  proceeding.rs  terminated.rs
lib/sip_server/src/transactions/: mod.rs  registration.rs
lib/sip_server/src/transport/: dns_lookup.rs  mod.rs  processor.rs  transport.rs
lib/sip_server/src/transport/uac/: mod.rs
lib/sip_server/src/transport/uas/: mod.rs
lib/sip_server/src/tu/: mod.rs
lib/sip_server/src/tu/dialogs/: dialog_sm.rs  mod.rs
lib/sip_server/src/tu/dialogs/uac/: dialog_sm.rs  mod.rs  multi_dialog.rs  validations.rs
lib/sip_server/src/tu/dialogs/uac/states/: confirmed.rs  deleted.rs  early.rs  terminated.rs
lib/sip_server/src/tu/dialogs/uas/: dialog_sm.rs  mod.rs  multi_dialog.rs
lib/sip_server/src/tu/dialogs/uas/states/: confirmed.rs  early.rs  errored.rs  mod.rs  un_acked.rs
lib/sip_server/src/tu/elements/: capabilities.rs  mod.rs  registrar.rs
lib/sip_server/src/tu/elements/proxy/: processor.rs
lib/sip_server/src/tu/elements/req_processor/: capabilities.rs  mod.rs  registrar.rs
lib/sip_server/src/tu/elements/ua/: mod.rs  processor.rs
lib/sip_server/src/tu/impls/proxy/: mod.rs
lib/sip_server/src/tu/impls/ua/: mod.rs  processor.rs
lib/store/: Cargo.toml
lib/store/src/: auth_request.rs  dialog.rs  error.rs  lib.rs  registration.rs  request.rs  response.rs  schema.rs  transaction.rs
lib/tasks/: Cargo.toml
lib/tasks/src/: lib.rs  tasks.rs
migrations/2020-07-20-092949_transactions_and_dialogs/: down.sql  up.sql
migrations/2020-07-22-215337_create_requests_and_responses/: down.sql  up.sql
migrations/2020-07-25-163027_registrations/: down.sql  up.sql
migrations/2020-07-31-145932_auth_requests/: down.sql  up.sql
migrations/2021-01-06-160603_registrations_table_fixes/: down.sql  up.sql
src/: lib.rs  main.rs
tests/: lib.rs
tests/common/: mod.rs
tests/common/extensions/: mod.rs  rsip_ext.rs  transaction_ext.rs  uri_ext.rs
tests/common/factories/: headers.rs  mod.rs  requests.rs  responses.rs  rsip_ext.rs
tests/common/snitches/: core.rs  messages.rs  mod.rs  panic.rs  spy.rs  transaction.rs  transport.rs
tests/integration/: mod.rs  registration.rs
tests/unit_tests/: digest.rs  mod.rs
tests/unit_tests/processors/: mod.rs  transport_tests.rs
(+109 files in other folders)
