[package]
name = "webphone"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

common = { path = "common" }
helpers = { path = "lib/helpers" }
models = { path = "lib/models" }
processor = { path = "lib/processor" }
server = { path = "lib/server" }
store = { path = "lib/store" }


[workspace]
members = [
  "common", "lib/helpers", "lib/models", "lib/processor", "lib/server",
  "lib/store"
]
