[package]
name = "webphone"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

common = { path = "common" }
helpers = { path = "lib/helpers" }
models = { path = "lib/models" }
processor = { path = "lib/processor" }
server = { path = "lib/server" }
store = { path = "lib/store" }
sip-helpers = { path = "lib/sip-helpers" }

[dev-dependencies]
#fake = { version = "2.0", features=['derive']}
#rand = "0.7.2"
#jsonschema-valid = "0.2.0"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "chrono", "numeric", "uuid", "r2d2", "network-address"] }
r2d2 = "0.8.9"
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", features = [ "postgres" ] }
tokio = { version = "0.2.11", features = ["default", "test-util"] }
#mockito = "0.25.1"
#Inflector = "0.11.4"


[workspace]
members = [
  "common", "lib/helpers", "lib/models", "lib/processor", "lib/server",
  "lib/store", "lib/sip-helpers"
]
