[package]
name = "viska"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }

common = { path = "common" }
helpers = { path = "lib/helpers" }
models = { path = "lib/models" }
sip_server = { path = "lib/sip_server" }
store = { path = "lib/store" }

[dev-dependencies]
fake = { version = "2.2.3", features=['derive']}
#rand = "0.7.2"
#jsonschema-valid = "0.2.0"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "chrono", "numeric", "uuid", "r2d2", "network-address"] }
r2d2 = "0.8.9"
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", features = [ "postgres" ] }
tokio = { version = "1.0", features = ["full", "test-util"] }
#mockito = "0.25.1"
#Inflector = "0.11.4"
testing_logger = "0.1.1"


[workspace]
members = [
  "common", "lib/helpers", "lib/models", "lib/sip_server", "lib/store"
]
