[package]
name = "common"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

[dependencies]
tokio-util = { version = "0.6.7", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.4"
bytes = "1.0.1"
futures-util = "0.3.4"
chrono = { version = "0.4.11" }
log = { version = "0.4.8" }
pretty_env_logger = { version = "0.4.0" }
rand = { version = "0.7" }
rand_chacha = { version = "0.2.2" }
uuid = { version = "0.8.1", features = ["v4"] }
ipnetwork = "0.16.0"
envconfig = "0.9.1"
envconfig_derive = "0.9.1"
delegate = "0.5.2"
md5 = "0.7.0"
async-trait = "0.1.40"
pnet = "0.27.2"
once_cell = "1.5.2"
lexical-core = "0.7.6"
rsip = { version = "0.4.0" }
rsip-dns = { version = "0.1.4", features = ["trust-dns"] }
