[package]
name = "server"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

common = { path = "../../common" }
processor = { path = "../processor" }
helpers = { path = "../helpers" }
models = { path = "../models" }
