[package]
name = "sip_server"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

common = { path = "../../common" }
models = { path = "../models" }
store = { path = "../store" }
helpers = { path = "../helpers" }
rsip = { path = "../rsip" }
