[package]
name = "store"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

once_cell = {version = "1.4.0" }

common = { path = "../../common" }
