[package]
name = "store"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }

diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "chrono", "numeric", "uuid", "r2d2", "network-address"] }
r2d2 = "0.8.9"
#diesel_logger = { git = "https://github.com/vasilakisfil/diesel-logger", branch = "feat/2.0-diesel" }


once_cell = {version = "1.4.0" }

common = { path = "../../common" }
models = { path = "../models" }
